# git-commit-helper

./: .gitignore  Cargo.toml  PKGBUILD  README.md  git-commit-helper.spec  install.sh  test_multi_issues.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  publish-crate.yml
.specstory/history/: 2025-04-28_08-33Z-项目静态编译支持讨论.md  2025-05-29_05-46Z-修改pkgbuild文件中的变量值.md  2025-07-17_10-46Z-git-commit-helper-installation-error.md  2025-07-29_05-07Z-add-test-suggestions-to-commit-messages.md  2025-07-29_05-23Z-列举测试建议时,不要使用-,而是用数字编号.md
completions/: git-commit-helper.bash  git-commit-helper.fish  git-commit-helper.zsh
debian/: changelog  control  rules
src/: ai_service.rs  commit.rs  config.rs  copyright_check.rs  debug.rs  gerrit.rs  git.rs  github.rs  install.rs  lib.rs  main.rs  review.rs  suggest.rs  terminal_format.rs  translator.rs
src/auth/: mod.rs
src/translator/: ai_service.rs  copilot_client.rs
